<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/editTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="670dp"
        android:fontFamily="sans-serif-black"
        android:text="Edit Task"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="53dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="516dp"
        app:srcCompat="@drawable/baseline_checklist_24"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="438dp"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <EditText
        android:id="@+id/updateTaskName"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="513dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="start|top"
        android:hint="@string/task_name"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/updateTaskDate"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="436dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/date"
        android:inputType="text" />

    <EditText
        android:id="@+id/updateTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="353dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/time"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="352dp"
        app:srcCompat="@drawable/baseline_access_time_24"
        android:contentDescription="@string/todo2" />

    <Button
        android:id="@+id/updateTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="267dp"
        android:text="Update" />


</RelativeLayout>
